--- a/hackachton/templates/account_management/admin.html
+++ b/hackachton/templates/account_management/admin.html
@@ -13,7 +13,7 @@
     <h5 class="card-title">Card title</h5>
     <img src="{{ url_for('static', filename='usergroup.png') }}" height="300px" width="300px"
     class="image"/>
-    <a href="/Azrul/retrieveMember" class="card-link">MEMBER RECORD</a>
+    <a href="/account_managementnt_management/retrieveMember" class="card-link">MEMBER RECORD</a>
 
   </div>
 </div>
@@ -22,7 +22,7 @@
     <h5 class="card-title">Card title</h5>
     <img src="{{ url_for('static', filename='stock-inventory.jpg') }}" height="300px" width="300px"
     class="image"/>
-    <a href="/Shinghak/Inventory" class="card-link">STOCK INVENTORY</a>
+    <a href="/transactions/Inventory" class="card-link">STOCK INVENTORY</a>
   </div>
 </div>
 
@@ -31,7 +31,7 @@
     <h5 class="card-title">Card title</h5>
     <img src="{{ url_for('static', filename='support.png') }}" height="300px" width="300px"
     class="image"/>
-    <a href="/asher/retrieveCustomer" class="card-link">CUSTOMER SUPPORT</a>
+    <a href="/customer_support/retrieveCustomer" class="card-link">CUSTOMER SUPPORT</a>
   </div>
 </div>
 </div>
