--- a/hackachton/templates/account_management/send.html
+++ b/hackachton/templates/account_management/send.html
@@ -5,7 +5,7 @@
     <div class="container1">
 <div class="container text-center" xmlns="http://www.w3.org/1999/html">
     <h1>Successful</h1>
-    <form method="GET" action="/azrul/login">
+    <form method="GET" action="/account_management/login">
     <button type="button" class="btn btn-success" >Continue</button>
     </form>
 </div>
