--- a/hackachton/templates/customer_support/ContactUs.html
+++ b/hackachton/templates/customer_support/ContactUs.html
@@ -240,7 +240,7 @@ right: 2%;
     <script>
         const button = document.getElementById('myfaq');
         button.addEventListener('click', () => {
-            window.location.href = '/asher/faq';
+            window.location.href = '/customer_support/faq';
         });
     </script>
 
