--- a/hackachton/templates/home.html
+++ b/hackachton/templates/home.html
@@ -264,7 +264,7 @@ right: 2%;
         {% if member  %}
 
         {% else %}
-        <form  action="/Azrul/CreateMember" method="GET" ><button class="btn btn-success" >Sign Up</button></form>
+        <form  action="/account_management/CreateMember" method="GET" ><button class="btn btn-success" >Sign Up</button></form>
 
         {% endif %}
 
