--- a/hackachton/templates/transactions/AddProduct.html
+++ b/hackachton/templates/transactions/AddProduct.html
@@ -61,7 +61,7 @@
 
     <div class="container">
         <h1>Add Product</h1>
-        <form action="/Shinghak/add_product" method="post">
+        <form action="/transactions/add_product" method="post">
             <div class="form-table">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
@@ -74,7 +74,7 @@
             </div>
             <div class="form-buttons">
                 <button class="button" type="submit">Add Product</button>
-                <a href="/Shinghak/Inventory" class="cancel-link">Cancel</a>
+                <a href="/transactions/Inventory" class="cancel-link">Cancel</a>
             </div>
         </form>
     </div>
