--- a/hackachton/templates/customer_support/review.html
+++ b/hackachton/templates/customer_support/review.html
@@ -11,7 +11,7 @@
 <!--</table>-->
 <div class="container2">
     <div class="mb-3 inner-container">
-        <form action="/asher/submit" method="post">
+        <form action="/customer_support/submit" method="post">
         <label for="name" class="form-label">Name:</label>
         <input type="text" id="name" name="name" class="form-control" required><br>
         <label for="rating" class="form-label" >Rating:</label><br>
