--- a/hackachton/templates/transactions/Product3.html
+++ b/hackachton/templates/transactions/Product3.html
@@ -202,7 +202,7 @@ margin-bottom: 20px;
             <p>Total Price: ${{ '%.2f' % total_amount }}</p>
         </div>
     <div class="cart-actions">
-        <a class="close-cart-btn" id="close-cart-btn" href="/Shinghak/cart">Close Cart &amp; Continue Shopping</a>
+        <a class="close-cart-btn" id="close-cart-btn" href="/transactions/cart">Close Cart &amp; Continue Shopping</a>
     </div>
 </div>
 
@@ -211,23 +211,15 @@ margin-bottom: 20px;
             <div class = "product-div">
                 <div class = "product-div-left">
                     <div class = "img-container">
-                        <img src = "{{  url_for('static', filename='image2/P2-Blue.jpeg')}}" alt = "watch">
+                        <img src = "{{  url_for('static', filename='image2/P3-Blue.webp')}}" alt = "watch">
                     </div>
-<!--                    <form method="POST" enctype="multipart/form-data" action="/upload">-->
-<!--                    <div class = "hover-container">-->
-<!--                        <div><img src = "images/w1.png"></div>-->
-<!--                        <div><img src = "images/w2.png"></div>-->
-<!--                        <div><img src = "images/w3.png"></div>-->
-<!--                        <div><img src = "images/w4.png"></div>-->
-<!--                        <div><img src = "images/w5.png"></div>-->
-<!--                    </div>-->
-<!--                    </form>-->
+
                 </div>
                 <div class = "product-div-right">
-                    <form action="/Shinghak/form1" method="POST" >
-                        <span class = "product-name" >{{ product2.name }}</span>
+                    <form action="/transactions/form2" method="POST" >
+                        <span class = "product-name" >{{ product3.name }}</span>
 
-                        <span class = "product-price">${{ '%.2f' % product2.price }}</span>
+                        <span class = "product-price">${{ '%.2f' % product3.price }}</span>
                     <div class = "product-rating">
                         <span><i class = "fas fa-star"></i></span>
                         <span><i class = "fas fa-star"></i></span>
@@ -237,14 +229,14 @@ margin-bottom: 20px;
                         <span>(350 ratings)</span>
                     </div>
 
-                    <p class = "product-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae animi ad minima veritatis dolore. Architecto facere dignissimos voluptate fugit ratione molestias quis quidem exercitationem voluptas.Engineered for agility and power, these sneakers provide the ultimate grip and stability, enabling quick cuts and explosive jumps. The breathable mesh upper keeps your feet cool during intense games, while the responsive midsole technology offers unparalleled energy return. With a sleek and dynamic design, these sneakers are not just footwear; they're an extension of your prowess on the hardwood.</p>
+                    <p class = "product-description">Built to withstand the rigors of high-intensity workouts, these shoes offer exceptional durability and flexibility. The reinforced toe cap and secure lacing system provide optimal support during weightlifting, while the grippy outsole ensures superior traction for rope climbs and sprints. Whether you're pushing your limits in the gym or tackling an outdoor obstacle course, these shoes are your trusted companion on your journey to peak performance.</p>
 
-                    <span class = "product-color" >Colour available: {{ product2.colors }}</span>
+                    <span class = "product-color" >Colour available: {{ product3.colors }}</span>
+                    <span class = "product-size">Size available: {{ product3.sizes }}</span>
 
-                    <span class = "product-size">Size available: {{ product2.sizes }}</span>
                     <label>Quantity:</label>
                     <input type="number" name="product_quantity" value="1" min="1">
-                    <input type="hidden" name="product_name" value="{{ product2.name }}">
+                    <input type="hidden" name="product_name" value="{{ product3.name }}">
 
 
                     <div class = "btn-groups">
